src/snapshots/near_enhanced_api__api__tests__ft_balance_for_contract_no_contract_deployed.snap
---
source: src/api.rs
expression: balance
---
Err(
    Error {
        code: 400,
        message: "Invalid Input: The account `olga.near` does not implement any suitable contract at block 68000000",
        retriable: false,
    },
)
