src/snapshots/near_enhanced_api__api__tests__ft_history.snap
---
source: src/api.rs
expression: balance
---
Ok(
    [
        CoinHistoryItem {
            action_kind: "TRANSFER",
            involved_account_id: Some(
                AccountId(
                    "v2.ref-finance.near",
                ),
            ),
            delta_balance: I128(
                -49721045500000000000,
            ),
            balance: U128(
                0,
            ),
            coin_metadata: None,
            block_timestamp_nanos: U64(
                1651148415542065025,
            ),
            block_height: U64(
                64475344,
            ),
        },
        CoinHistoryItem {
            action_kind: "MINT",
            involved_account_id: None,
            delta_balance: I128(
                49721045500000000000,
            ),
            balance: U128(
                49721045500000000000,
            ),
            coin_metadata: None,
            block_timestamp_nanos: U64(
                1650928065580838474,
            ),
            block_height: U64(
                64302179,
            ),
        },
    ],
)
