src/snapshots/near_enhanced_api__api__tests__nft_count_page_2.snap
---
source: src/api.rs
expression: balance
---
Ok(
    [
        NftsByContractInfo {
            contract_account_id: AccountId(
                "rocketbois.neartopia.near",
            ),
            nft_count: 1,
            last_updated_at_timestamp: U128(
                1655565667604044769,
            ),
            metadata: NftContractMetadata {
                spec: "nft-1.0.0",
                name: "RocketBois",
                symbol: "ROCKET",
                icon: None,
                base_uri: Some(
                    "https://bafybeibrteurbwo76af6c4l4jc3k5dvjd7f73l62peonbsni4qibkk27hq.ipfs.dweb.link/",
                ),
                reference: None,
                reference_hash: None,
            },
        },
    ],
)
